<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="3dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:id="@+id/cardItem"
        android:focusable="true"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:id="@+id/thumbnail"
            android:padding="5dp"
            android:scaleType="fitCenter"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/display_details"
            android:layout_weight="1.1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:text="@string/issue"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prof_name"
                android:textStyle="italic"
                android:text="@string/prof_name"
                android:layout_below="@+id/name"
                android:textSize="12sp"
                android:layout_marginBottom="0dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/doc_name"
                android:text="@string/doc_name"
                android:layout_below="@+id/prof_name"
                android:textSize="12sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/solution"
                android:text="@string/solution"
                android:layout_below="@+id/doc_name"
                android:textSize="12sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="@string/date"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
