<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="3dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/cardItem"
        android:focusable="true"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:id="@+id/thumbnail"
            android:padding="10dp"
            android:scaleType="fitCenter"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/display_details"
            android:layout_weight="1.4"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:text="@string/name_doctor"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/key"
                android:textStyle="italic"
                android:text="@string/generated_key"
                android:layout_below="@+id/name"
                android:textSize="12sp"
                android:layout_marginBottom="0dp"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/accept"
                android:text="@string/accept"
                android:gravity="center"
                android:textColor="@color/green"
                android:background="@drawable/signin_green"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:id="@+id/reject"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="90dp"
                android:text="@string/reject"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:background="@drawable/signin"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
