<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000"
    tools:context=".HomeActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentPanel"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@mipmap/back"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/logo_div"
            android:visibility="gone"
            android:background="@color/colorAccentLight"
            android:layout_centerInParent="true">
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/splash_cover"
            android:background="@color/colorPrimary"
            android:layout_centerInParent="true">
        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.5dp"
            android:id="@+id/ico_splash"
            android:layout_centerInParent="true"
            android:src="@mipmap/icon"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="5dp"
            android:id="@+id/data_div"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-5dp"
            android:paddingBottom="5dp">
            <android.support.v4.widget.SwipeRefreshLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/refresh">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        android:visibility="gone"
                        android:id="@+id/display">
                    </android.support.v7.widget.RecyclerView>
                    <android.support.design.widget.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:layout_marginEnd="22dp"
                        android:id="@+id/add"
                        android:src="@drawable/icon_mono"
                        android:clickable="true"
                        android:focusable="true"
                        app:rippleColor="@color/ripple"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/diagnosis"
                        android:visibility="gone"
                        android:elevation="10dp"
                        android:background="@color/colorAccent">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/symptoms_tag"
                            android:textAllCaps="true"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:textSize="20sp"
                            android:text="@string/symptoms_tag"/>
                        <com.hootsuite.nachos.NachoTextView
                            android:id="@+id/symptom_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textCursorDrawable="@drawable/cursor"
                            android:background="@drawable/symptom_field"
                            android:textColorHint="@color/ripple"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:hint="@string/enter_symptoms"
                            android:layout_alignParentTop="true"
                            android:layout_margin="15dp"
                            android:layout_below="@+id/symptoms_tag"
                            app:chipBackground="@color/colorPrimary"
                            app:chipTextColor ="@color/colorAccentLight"
                            app:chipTextSize="16dp"
                            app:chipHeight="30dp"
                            app:chipSpacing="5dp"
                            app:chipVerticalSpacing="5dp" />
                        <EditText
                            android:id="@+id/dob"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_below="@+id/symptom_edit"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="50dp"
                            android:textColor="@color/profile"
                            android:drawablePadding="10dp"
                            android:backgroundTint="#fff"
                            android:drawableStart="@drawable/dob"
                            android:hint="@string/dob"
                            android:inputType="date"
                            android:textColorHint="@color/profile_text"
                            android:maxLines="1"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:id="@+id/dob_chooser"
                            android:padding="4dp"
                            android:layout_marginEnd="22dp"
                            android:layout_marginBottom="10dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignBottom="@+id/dob"
                            style="@style/SelectableItemBackgroundBorderless"
                            android:src="@drawable/calendar"/>
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v4.widget.SwipeRefreshLayout>
        </android.support.v7.widget.CardView>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/menu"
            android:src="@drawable/menu"
            android:layout_above="@+id/data_div"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="18dp"
            android:layout_marginStart="28dp"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_tag"
            android:text="@string/home"
            android:layout_above="@+id/data_div"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="85dp"
            android:visibility="invisible"
            android:textSize="28sp"
            android:textColor="#fff"/>
        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:id="@+id/done"
            android:src="@drawable/tick_mono"
            android:layout_above="@+id/data_div"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="25dp"
            android:visibility="gone"/>
    </RelativeLayout>
</RelativeLayout>
